# PythonMachLearn

./: app.py  pyproject.toml  testes.ipynb
